--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -3,11 +3,6 @@ body{
   font-family: sans-serif;
 }
 
-a {
-  text-decoration: none;
-  color: black;
-}
-
 .tasks{
   display:block;
   width:500px;
@@ -19,9 +14,13 @@ a {
   }
 }
 
+#new_project, #task-form {
+  padding-left: 45px;
+}
+
 .projects {
   @extend .tasks;
-  background-image: url('../../img/}.svg');
+  background-image: url('}.svg');
   background-repeat: no-repeat;
   background-position: right top;
   background-size: contain;
@@ -32,11 +31,19 @@ a {
   color: black;
 }
 
+.project-links {
+  color: rgba(0, 0, 0, 0.6);
+}
 
 
 li.done{
   text-decoration:line-through;
   color:rgba(0,0,0,.6);
+}
+
+a {
+  color: rgba(0,0,0,.6);
+  text-decoration: none;
 }
 
 
